# recon

./: .gitignore  CHANGELOG.md  Cargo.toml  FUTURE.md  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  plan.md
.commandcode/taste/: taste.md
.commandcode/taste/workflow-patterns/: taste.md
.github/workflows/: ci.yml  cross-platform.yml  deploy.yml  release.yml
.kiro/settings/: mcp.json
crates/recon-cli/: Cargo.toml
crates/recon-cli/src/: doctor.rs  hosted.rs  main.rs  pretty.rs  savings.rs  update.rs
crates/recon-cli/tests/: e2e_binary_spawn.rs  e2e_full_pipeline.rs  e2e_index_and_query.rs  e2e_self_host.rs  shutdown.rs  stdout_hygiene.rs  watcher_delete.rs
crates/recon-core/: Cargo.toml
crates/recon-core/src/: config.rs  embed.rs  error.rs  lang.rs  lib.rs  redact.rs  shapes.rs  symbol.rs
crates/recon-embed/: Cargo.toml
crates/recon-embed-client/: Cargo.toml
crates/recon-embed-client/src/: lib.rs
crates/recon-embed/src/: embed_service.rs  embedder.rs  error.rs  format.rs  lib.rs  vec_read_pool.rs  vector_store.rs
crates/recon-indexer/: Cargo.toml
crates/recon-indexer/src/: git.rs  indexer.rs  lib.rs  merkle.rs  walker.rs  watcher.rs
crates/recon-parser/: Cargo.toml
crates/recon-parser/benches/: parser_bench.rs
crates/recon-parser/src/: extract.rs  languages.rs  lib.rs  pool.rs
crates/recon-remote/: Cargo.toml
crates/recon-remote/src/: main.rs
crates/recon-search/: Cargo.toml
crates/recon-search/benches/: search_bench.rs
crates/recon-search/src/: fff_backend.rs  filters.rs  fuzzy.rs  graph.rs  lib.rs  pagerank.rs  search_trait.rs  tantivy_backend.rs  text.rs  tokens.rs  utils.rs
crates/recon-server/: Cargo.toml  build.rs
crates/recon-server/src/: account.rs  calibrate.rs  lib.rs  license.rs  multi_repo.rs  repos.rs  router.rs  server.rs  telemetry.rs  tools.rs
crates/recon-storage/: Cargo.toml
crates/recon-storage/benches/: storage_bench.rs
crates/recon-storage/src/: hash.rs  lib.rs  read_fns.rs  read_pool.rs  schema.rs  store.rs
docs/: ARCHITECTURE.md  FFF_INTEGRATION.md  HOSTED_EMBED_PLAN.md  IMPLEMENTATION.md  PERF_BASELINE.md
docs/adr/: 000-symbol-first-architecture.md  001-text-search-backend.md  002-output-shape-discipline.md  003-stdio-transport-hygiene.md
modal/: .gitignore  .gitkeep  README.md  embed_service.py  requirements.txt
scripts/: install.ps1  install.sh  logo.html  og-banner.html  pgo-build.sh
site/: Docs.html  _headers  _redirects  banner.html  index.html  install.ps1  install.sh  login.html  robots.txt  sitemap.xml  wrangler.toml
site/changelog/: index.html
site/css/: nav-menu.css  shared.css
site/dashboard/: index.html
site/functions/: latest.json.js
site/functions/api/: [[path]].js  geo.js
site/functions/releases/: [[path]].js
site/js/: auth.js  copy-buttons.js  dashboard.js  docs-toc.js  model-prices.json  nav-menu.js  os-tabs.js  pricing.js  theme.js  version.js
site/login/: index.html
site/pricing/: index.html
site/privacy/: index.html
site/refunds/: index.html
site/terms/: index.html
worker/: package-lock.json  package.json  tsconfig.json  vitest.config.mts  vitest.config.ts  wrangler.toml
worker/migrations/: 0001_initial.sql  0002_payment_events.sql  0003_subscription_lifecycle.sql  0004_currency_per_plan.sql  0005_user_repos.sql  0006_webhook_events_dropped.sql  0007_webhook_events_seen.sql  0008_subscription_currency.sql  0009_usage_rollups.sql  0010_usage_rollups_per_repo.sql  0011_usage_rollups_measured.sql  0012_usage_rollups_latency_saved.sql
worker/src/: index.ts  scheduled.ts  schemas.ts  types.ts
worker/src/lib/: crypto.ts  github.ts  razorpay.ts  session.ts  tiers.ts
worker/src/middleware/: apikey.ts  auth.ts  cors.ts  error.ts  ratelimit.ts
worker/src/routes/: account.ts  auth.ts  billing.ts  dashboard.ts  embed.ts  license.ts
worker/tests/: account.test.ts  auth.test.ts  billing-webhook.test.ts  dashboard.test.ts  embed.test.ts  license.test.ts  ratelimit.test.ts  savings.test.ts  schemas.test.ts  setup.ts  subscription-lifecycle.test.ts  tiers.test.ts
xtask/: Cargo.toml
xtask/src/: main.rs  measured_baselines.rs
