[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bravo1goingdark/recon"

[workspace.dependencies]
# Internal crates
recon-core = { path = "crates/recon-core" }
recon-parser = { path = "crates/recon-parser" }
recon-storage = { path = "crates/recon-storage" }
recon-search = { path = "crates/recon-search" }
recon-embed = { path = "crates/recon-embed" }
recon-indexer = { path = "crates/recon-indexer" }
recon-server = { path = "crates/recon-server" }

# Async runtime
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs"] }

# MCP SDK
rmcp = { version = "1.5.0", features = ["server", "transport-async-rw", "transport-io"] }

# Tree-sitter
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"

# Storage
rusqlite = { version = "0.37", features = ["bundled", "blob", "array", "modern_sqlite"] }
rusqlite_migration = "2.3"
blake3 = "1"
tantivy = "0.26.0"

# Search
nucleo = "0.5.0"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"

# fff search
fff-grep = "=0.4.0"
fff-query-parser = "=0.4.0"

# Embeddings (optional, feature-gated)
fastembed = "5"
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"

# Git & file watching
gix = { version = "0.81.0", default-features = false, features = ["blob-diff", "worktree-stream", "status", "sha1"] }
ignore = "0.4.25"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"

# Graph / ranking
petgraph = "0.8.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Token counting
tiktoken-rs = "0.11.0"

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }

# Hot-path performance
smallvec = "1.15.1"
compact_str = { version = "0.9.0", features = ["serde"] }
ahash = "0.8.12"
arc-swap = "1.9.1"
rayon = "1.12.0"
crossbeam-queue = "0.3.12"
memmap2 = "0.9.10"

# Config
toml = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Allocator
mimalloc = "0.1"

# Misc
tempfile = "3.27.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
