[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.5.7"
edition = "2021"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bravo1goingdark/recon"

[workspace.dependencies]
# Internal crates
recon-core = { path = "crates/recon-core" }
recon-parser = { path = "crates/recon-parser" }
recon-storage = { path = "crates/recon-storage" }
recon-search = { path = "crates/recon-search" }
recon-embed = { path = "crates/recon-embed" }
recon-embed-client = { path = "crates/recon-embed-client" }
recon-indexer = { path = "crates/recon-indexer" }
recon-server = { path = "crates/recon-server" }

# Async runtime
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "net"] }

# MCP SDK
rmcp = { version = "1.5.0", features = ["server", "transport-async-rw", "transport-io", "transport-streamable-http-server"] }

# Tree-sitter
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"

# Storage
rusqlite = { version = "0.39.0", features = ["bundled", "blob", "array", "modern_sqlite"] }
rusqlite_migration = "2.5.0"
blake3 = "1.8.4"
tantivy = "0.26.1"

# Search
nucleo = "0.5.0"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"

# fff search
fff-grep = "=0.6.1"
fff-query-parser = "=0.6.1"

# Embeddings
fastembed = "5.13.3"
sqlite-vec = "0.1.9"


# Git & file watching
gix = { version = "0.81.0", default-features = false, features = ["blob-diff", "worktree-stream", "status", "sha1"] }
ignore = "0.4.25"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"

# Graph / ranking
petgraph = "0.8.3"

# Serialization
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
schemars = "1.2.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Token counting
tiktoken-rs = "0.11.0"

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }

# Concurrency
dashmap = "6.1.0"
parking_lot = "0.12.5"

# Hot-path performance
aho-corasick = "1.1.4"
bytemuck = "1.24"
smallvec = { version = "1.15.1", features = ["serde", "write"] }
compact_str = { version = "0.9.0", features = ["serde"] }
ahash = "0.8.12"
arc-swap = "1.9.1"
rayon = "1.12.0"
crossbeam-queue = "0.3.12"
crossbeam-channel = "0.5.15"
globset = "0.4.18"
memmap2 = "0.9.10"

# Config
toml = "1.1.2"
dirs = "6.0.0"

# Benchmarking
criterion = { version = "0.8.2", features = ["html_reports"] }

# HTTP server
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server-auto", "http1"] }
http-body-util = "0.1.3"
tower-service = "0.3.3"
tokio-util = { version = "0.7.18", features = ["codec"] }

# Allocator
mimalloc = "0.1.49"

# License validation (lightweight sync HTTP client).
# rustls instead of native-tls: ureq's default TLS pulls openssl-sys,
# which doesn't cross-compile to aarch64-unknown-linux-gnu without an
# arm64 libssl sysroot on the CI host. rustls is pure-Rust (ring crypto
# backend), no C deps, same HTTPS behavior, and cross-compiles to every
# target in release.yml's matrix without extra apt packages.
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls"] }

# HMAC-SHA256 for license signing (RustCrypto)
hmac = "0.12"
sha2 = "0.10"

# Self-update (`recon update`): fetch R2 release artifact, verify SHA256,
# extract, replace the running binary in place.
# - flate2+tar: Unix .tar.gz archives (default-features = false on flate2
#   selects rust_backend over the default zlib C dep, keeping the graph
#   openssl-free across every cross target).
# - zip: Windows .zip archives. Minimal features: just deflate, no bzip2
#   or zstd which we don't emit in the release pipeline.
# - semver: string-compare on versions like "v0.1.10" < "v0.1.2" is
#   wrong; parse properly.
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
tar = { version = "0.4", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }
semver = "1"

# Misc
tempfile = "3.27.0"
filetime = "0.2"
ulid = { version = "1.2", default-features = false, features = ["std"] }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
