[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
recon-server = { path = "../crates/recon-server" }
recon-storage = { path = "../crates/recon-storage" }
recon-search = { path = "../crates/recon-search" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
rmcp = { workspace = true }
