[package]
name = "recon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI binary for recon MCP server"

[[bin]]
name = "recon"
path = "src/main.rs"

[dependencies]
recon-core = { workspace = true }
recon-storage = { workspace = true }
recon-search = { workspace = true }
recon-indexer = { workspace = true }
recon-server = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
mimalloc = { workspace = true }
dashmap = { workspace = true }
toml = { workspace = true }
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tower-service = { workspace = true }
tokio-util = { workspace = true }

[features]
default = []
embed = ["recon-server/embed"]

[dev-dependencies]
tempfile = { workspace = true }
