[package]
name = "recon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI binary for recon MCP server"

[[bin]]
name = "recon"
path = "src/main.rs"

[dependencies]
recon-core = { workspace = true }
recon-storage = { workspace = true }
recon-search = { workspace = true }
recon-indexer = { workspace = true }
recon-server = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
mimalloc = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower-service = { workspace = true }
tokio-util = { workspace = true }

# `recon update` self-upgrade
ureq = { workspace = true }
sha2 = { workspace = true }
semver = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
zip = { workspace = true }

[features]
default = []
embed = ["recon-server/embed"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
