[package]
name = "recon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI binary for recon MCP server"

[[bin]]
name = "recon"
path = "src/main.rs"

[dependencies]
recon-core = { workspace = true }
recon-storage = { workspace = true }
recon-search = { workspace = true }
recon-indexer = { workspace = true }
recon-server = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
mimalloc = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower-service = { workspace = true }
tokio-util = { workspace = true }

# `recon update` self-upgrade
ureq = { workspace = true }
sha2 = { workspace = true }
semver = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

# `bench-baselines` simulator: walks the repo respecting .gitignore
# and runs literal grep-equivalent matches to derive the static
# BASELINES table from real workload measurements rather than
# asserted constants. Word-boundary matching is hand-rolled rather
# than pulling in the `regex` crate as a new workspace dependency.
ignore = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
zip = { workspace = true }

[features]
default = []
# Enable local ONNX inference for semantic search. Default builds wire
# in the hosted endpoint via recon-embed-client unconditionally — when
# credentials are missing the server degrades to a clear "run
# `recon login`" message. This flag swaps in the offline fastembed
# path for air-gapped / regulated environments.
local-embed = ["recon-server/local-embed"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
