[package]
name = "recon-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local ONNX embeddings and vector search for recon"

[dependencies]
recon-core = { workspace = true }
fastembed = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
compact_str = { workspace = true }
