[package]
name = "recon-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Merkle walker, file watcher, and incremental indexing for recon"

[dependencies]
recon-core = { workspace = true }
recon-parser = { workspace = true }
recon-storage = { workspace = true }
recon-search = { workspace = true }
blake3 = { workspace = true }
tantivy = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
rayon = { workspace = true }
gix = { workspace = true }
tracing = { workspace = true }
crossbeam-queue = { workspace = true }

recon-embed = { workspace = true, optional = true }

[features]
default = []
embed = ["dep:recon-embed"]

[dev-dependencies]
tempfile = { workspace = true }
