[package]
name = "recon-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Merkle walker, file watcher, and incremental indexing for recon"

[dependencies]
recon-core = { workspace = true }
recon-parser = { workspace = true }
recon-storage = { workspace = true }
recon-search = { workspace = true }
aho-corasick = { workspace = true }
blake3 = { workspace = true }
tantivy = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
rayon = { workspace = true }
gix = { workspace = true }
tracing = { workspace = true }
crossbeam-queue = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# recon-embed is unconditionally linked because the vector-store /
# read-pool layer is always available (no fastembed / ONNX). When
# `local-inference` is wanted, the consuming crate (recon-server)
# enables `recon-embed/local-inference` directly via its own
# `local-embed` feature.
recon-embed = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
