[package]
name = "recon-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
description = "CLI client for remote recon MCP servers"

[[bin]]
name = "recon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
