[package]
name = "recon-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP server handler and tool implementations for recon"

[dependencies]
recon-core = { workspace = true }
recon-storage = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
recon-search = { workspace = true }
recon-indexer = { workspace = true }
tantivy = { workspace = true }
recon-parser = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
ureq = { workspace = true }
rayon = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
ahash = { workspace = true }
compact_str = { workspace = true }
smallvec = { workspace = true }
arc-swap = { workspace = true }
ulid = { workspace = true }
ignore = { workspace = true }
# Cross-platform "is this the same file?" oracle. Used by start_watcher's
# self-heal loop to detect `.recon/index.db` being unlinked / replaced
# under us. std's Windows `MetadataExt::file_index()` is gated behind
# the unstable `windows_by_handle` feature; this crate wraps the
# Win32 GetFileInformationByHandle API on stable.
file-id = "0.2"

# Hosted-embed default: ureq+rustls HTTP client for /v1/embed.
# Tiny dependency (no ONNX, no openssl-sys), always linked.
recon-embed-client = { workspace = true }

# Vector store + read pool (sqlite-vec, no ONNX) are always linked.
# Local fastembed inference is opt-in via the `local-embed` feature
# below, which forwards to `recon-embed/local-inference`.
recon-embed = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
# Enable offline ONNX inference. Replaces the hosted endpoint with
# fastembed's local Jina v2-base-code model. ~50 MB binary inflation;
# breaks aarch64 cross-compile without openssl sysroot. Use this for
# regulated / air-gapped environments where chunk text must never
# leave the machine. The hosted client (`recon-embed-client`) is
# still linked but unused on this code path. Default builds wire in
# the hosted endpoint unconditionally via `init_embed`.
local-embed = ["recon-embed/local-inference"]
