[package]
name = "recon-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQLite schema, migrations, and content hashing for recon"

[dependencies]
recon-core = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
compact_str = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
